force-app/main/default/objects/sc_ext__Report__mdt/fields/sc_ext__App_Namespace__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__App_Namespace__c</fullName>
    <description>This field represents the namespace which this report supports</description>
    <label>App Namespace</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>