force-app/main/default/objects/sc_ext__Report__mdt/fields/sc_ext__Component_Name__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Component_Name__c</fullName>
    <description>This is the name of the Vue Component which allows the user to run the report</description>
    <label>Component Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>