force-app/main/default/objects/sc_ext__Report__mdt/fields/sc_ext__Icon__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Icon__c</fullName>
    <description>This is the icon displayed next to the report on the report selection screen</description>
    <label>Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>