force-app/main/default/objects/sc_ext__Report__mdt/fields/sc_ext__Report_Generator_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Report_Generator_Class_Name__c</fullName>
    <description>This field contains the name of the class which generates data for this report</description>
    <label>Report Generator Class Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>